--- a/movie/html/예능.html
+++ b/movie/html/예능.html
@@ -37,13 +37,58 @@
       </nav>
       <main>
         <section class="hero">
-          <video
-            src="../videos/2024-01-09 14 03 34.mp4"
-            class="bg"
-            autoplay
-            loop
-            muted
-          ></video>
+         <!-- 자동 슬라이드 시작 -->
+         <span class="slideshow-container">
+          <div class="Slidesbackground">
+            <div class="mySlides fade">
+              <img
+                src="../img/찰리의초콜릿공장/2024-01-11 15 46 22.jpg"
+                class="slideshow-image"
+               
+              />
+            </div>
+            <div class="mySlides fade">
+              <img
+                src="../img/찰리의초콜릿공장/2024-01-11 15 47 12.jpg"
+                class="slideshow-image"
+              />
+            </div>
+            <div class="mySlides fade">
+              <img
+                src="../img/찰리의초콜릿공장/2024-01-11 15 49 29.jpg"
+                class="slideshow-image"
+              />
+            </div>
+            <div class="mySlides fade">
+              <img
+                src="../img/찰리의초콜릿공장/2517C74F560811E30D.jpg"
+                class="slideshow-image"
+              />
+            </div>
+            <div class="mySlides fade">
+              <img
+                src="../img/찰리의초콜릿공장/66589_253368_114.jpg"
+                class="slideshow-image"
+              />
+            </div>
+            <div class="mySlides fade">
+              <img
+                src="../img/찰리의초콜릿공장/K-081.png"
+                class="slideshow-image"
+              />
+            </div>
+            
+              />
+            </div>
+            <div class="mySlides fade">
+              <img
+                src="../img/찰리의초콜릿공장/YA_NP_20091225_00134678_P.jpg"
+                class="slideshow-image"
+              />
+            </div>
+          </div>
+        </span>
+        <!-- 자동 슬라이드 끝 -->
           <div class="hero-in">
             <h1>
               <span class="in"
@@ -64,5 +109,226 @@
         </section>
       </main>
     </div>
+
+    <main class="row">
+      <div class="cards col-2">
+        <div class="box-img translateX">
+          <p>
+            가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
+            태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
+          </p>
+          <div class="fills">
+            <img
+              src="../img/영화/메이즈 러너.webp"
+              width="400px"
+              height="500px"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="cards col-2">
+        <div class="box-img translateX">
+          <p>
+            가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
+            태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
+          </p>
+          <div class="fills">
+            <img
+              src="../img/영화/사일런트 힐.jpg"
+              width="400px"
+              height="500px"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="cards col-2">
+        <div class="box-img translateX">
+          <p>
+            가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
+            태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
+          </p>
+          <div class="fills">
+            <img src="../img/영화/조커.jpg" width="400px" height="500px" />
+          </div>
+        </div>
+      </div>
+      <div class="cards col-2">
+        <div class="box-img translateX">
+          <p>
+            가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
+            태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
+          </p>
+          <div class="fills">
+            <img
+              src="../img/영화/나홀로 집에 2.webp"
+              width="400px"
+              height="500px"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="cards col-2">
+        <div class="box-img translateX">
+          <p>
+            가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
+            태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
+          </p>
+          <div class="fills">
+            <img src="../img/영화/해리포터.jpg" width="400px" height="500px" />
+          </div>
+        </div>
+      </div>
+      <div class="cards col-2">
+        <div class="box-img translateX">
+          <p>
+            가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
+            태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
+          </p>
+          <div class="fills">
+            <img src="../img/영화/찰리 2.jpg" width="400px" height="500px" />
+          </div>
+        </div>
+      </div>
+      <div class="cards col-2">
+        <div class="box-img translateX">
+          <p>
+            가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
+            태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
+          </p>
+          <div class="fills">
+            <img src="../img/영화/타겟.jpeg" width="400px" height="500px" />
+          </div>
+        </div>
+      </div>
+      <div class="cards col-2">
+        <div class="box-img translateX">
+          <p>
+            가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
+            태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
+          </p>
+          <div class="fills">
+            <img src="../img/영화/맨홀.jpg" width="400px" height="500px" />
+          </div>
+        </div>
+      </div>
+      <div class="cards col-2">
+        <div class="box-img translateX">
+          <p>
+            가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
+            태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
+          </p>
+          <div class="fills">
+            <img src="../img/영화/반도.jpg" width="400px" height="500px" />
+          </div>
+        </div>
+      </div>
+      <div class="cards col-2">
+        <div class="box-img translateX">
+          <p>
+            가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
+            태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
+          </p>
+          <div class="fills">
+            <img
+              src="../img/영화/백두산_영화_포스터.jpg"
+              width="400px"
+              height="500px"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="cards col-2">
+        <div class="box-img translateX">
+          <p>
+            가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
+            태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
+          </p>
+          <div class="fills">
+            <img src="../img/영화/신과 함께.jpg" width="400px" height="500px" />
+          </div>
+        </div>
+      </div>
+      <div class="cards col-2">
+        <div class="box-img translateX">
+          <p>
+            가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
+            태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
+          </p>
+          <div class="fills">
+            <img src="../img/영화/증인.jpg" width="400px" height="500px" />
+          </div>
+        </div>
+      </div>
+      <div class="cards col-2">
+        <div class="box-img translateX">
+          <p>
+            가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
+            태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
+          </p>
+          <div class="fills">
+            <img src="../img/영화/발레리나.webp" width="400px" height="500px" />
+          </div>
+        </div>
+      </div>
+      <div class="cards col-2">
+        <div class="box-img translateX">
+          <p>
+            가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
+            태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
+          </p>
+          <div class="fills">
+            <img src="../img/영화/변신.webp" width="400px" height="500px" />
+          </div>
+        </div>
+      </div>
+      <div class="cards col-2">
+        <div class="box-img translateX">
+          <p>
+            가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
+            태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
+          </p>
+          <div class="fills">
+            <img
+              src="../img/영화/뷰티인 사이트.jpg"
+              width="400px"
+              height="500px"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="cards col-2">
+        <div class="box-img translateX">
+          <p>
+            가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
+            태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
+          </p>
+          <div class="fills">
+            <img src="../img/영화/30일.webp" width="400px" height="500px" />
+          </div>
+        </div>
+      </div>
+      <div class="cards col-2">
+        <div class="box-img translateX">
+          <p>
+            가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
+            태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
+          </p>
+          <div class="fills">
+            <img src="../img/영화/모가디슈.jpg" width="400px" height="500px" />
+          </div>
+        </div>
+      </div>
+      <div class="cards col-2">
+        <div class="box-img translateX">
+          <p>
+            가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
+            태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
+          </p>
+          <div class="fills">
+            <img src="../img/영화/숨바꼭질.jpg" width="400px" height="500px" />
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
