--- a/movie/html/드라마.html
+++ b/movie/html/드라마.html
@@ -21,7 +21,7 @@
             src="../img/아이콘/MOVIE Made in - Koo ha rim (1).svg"
             width="200px"
             height="100px"
-          />  
+          />
         </div>
         <div class="menu">
           <a href="../html/main.html" class="aa1">Home</a>
@@ -37,13 +37,58 @@
       </nav>
       <header>
         <section class="hero">
-          <video
-            src="../videos/2024-01-08 15 10 05.mp4"
-            class="bg"
-            autoplay
-            loop
-            muted
-          ></video>
+        <!-- 자동 슬라이드 시작 -->
+        <span class="slideshow-container">
+          <div class="Slidesbackground">
+            <div class="mySlides fade">
+              <img
+                src="../img/찰리의초콜릿공장/2024-01-11 15 46 22.jpg"
+                class="slideshow-image"
+               
+              />
+            </div>
+            <div class="mySlides fade">
+              <img
+                src="../img/찰리의초콜릿공장/2024-01-11 15 47 12.jpg"
+                class="slideshow-image"
+              />
+            </div>
+            <div class="mySlides fade">
+              <img
+                src="../img/찰리의초콜릿공장/2024-01-11 15 49 29.jpg"
+                class="slideshow-image"
+              />
+            </div>
+            <div class="mySlides fade">
+              <img
+                src="../img/찰리의초콜릿공장/2517C74F560811E30D.jpg"
+                class="slideshow-image"
+              />
+            </div>
+            <div class="mySlides fade">
+              <img
+                src="../img/찰리의초콜릿공장/66589_253368_114.jpg"
+                class="slideshow-image"
+              />
+            </div>
+            <div class="mySlides fade">
+              <img
+                src="../img/찰리의초콜릿공장/K-081.png"
+                class="slideshow-image"
+              />
+            </div>
+            
+              />
+            </div>
+            <div class="mySlides fade">
+              <img
+                src="../img/찰리의초콜릿공장/YA_NP_20091225_00134678_P.jpg"
+                class="slideshow-image"
+              />
+            </div>
+          </div>
+        </span>
+        <!-- 자동 슬라이드 끝 -->
           <div class="hero-in">
             <h1>
               <span class="in">미스터 선샤인 </span>
@@ -61,109 +106,228 @@
       </header>
     </div>
     <main class="row">
-      <div class="cards col-4">
+      <div class="cards col-2">
         <div class="box-img translateX">
           <p>
             가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
             태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
           </p>
           <div class="fills">
-            <img src="../img/드라마/정신병동에도 아침이 와요.jpg" width="400px" height="600px" />
+            <img
+              src="../img/영화/메이즈 러너.webp"
+              width="400px"
+              height="500px"
+            />
           </div>
         </div>
       </div>
-      <div class="cards col-4">
+      <div class="cards col-2">
         <div class="box-img translateX">
           <p>
             가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
             태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
           </p>
           <div class="fills">
-            <img src="../img/드라마/검색어를 입력.jpg" width="200px" height="300px" />
+            <img
+              src="../img/영화/사일런트 힐.jpg"
+              width="400px"
+              height="500px"
+            />
           </div>
         </div>
       </div>
-      <div class="cards col-4">
+      <div class="cards col-2">
         <div class="box-img translateX">
           <p>
             가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
             태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
           </p>
           <div class="fills">
-            <img src="../img/드라마/구르미 그린 달빛.jpg" width="200px" height="300px" />
+            <img src="../img/영화/조커.jpg" width="400px" height="500px" />
           </div>
         </div>
       </div>
-      <div class="cards col-4">
+      <div class="cards col-2">
         <div class="box-img translateX">
           <p>
             가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
             태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
           </p>
           <div class="fills">
-            <img src="../img/드라마/드라마_도깨비_포스터2.jpg" width="200px" height="300px" />
+            <img
+              src="../img/영화/나홀로 집에 2.webp"
+              width="400px"
+              height="500px"
+            />
           </div>
         </div>
       </div>
-      <div class="cards col-4">
+      <div class="cards col-2">
         <div class="box-img translateX">
           <p>
             가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
             태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
           </p>
           <div class="fills">
-            <img src="../img/드라마/빈센조.jpg" width="200px" height="300px" />
+            <img src="../img/영화/해리포터.jpg" width="400px" height="500px" />
           </div>
         </div>
       </div>
-      <div class="cards col-4">
+      <div class="cards col-2">
         <div class="box-img translateX">
           <p>
             가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
             태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
           </p>
           <div class="fills">
-            <img src="../img/드라마/마이데몬.jpg" width="200px" height="300px" />
+            <img src="../img/영화/찰리 2.jpg" width="400px" height="500px" />
           </div>
         </div>
       </div>
-      <div class="cards col-4">
+      <div class="cards col-2">
         <div class="box-img translateX">
           <p>
             가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
             태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
           </p>
           <div class="fills">
-            <img src="../img/드라마/하이쿠키.jpg" width="200px" height="300px" />
+            <img src="../img/영화/타겟.jpeg" width="400px" height="500px" />
           </div>
         </div>
       </div>
-      <div class="cards col-4">
+      <div class="cards col-2">
         <div class="box-img translateX">
           <p>
             가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
             태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
           </p>
           <div class="fills">
-            <img src="../img/드라마/드림하이.jpg" width="200px" height="300px" />
+            <img src="../img/영화/맨홀.jpg" width="400px" height="500px" />
           </div>
         </div>
       </div>
-      <div class="cards col-4">
+      <div class="cards col-2">
         <div class="box-img translateX">
           <p>
             가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
             태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
           </p>
           <div class="fills">
-            <img src="../img/드라마/금수저.jpg" width="200px" height="300px" />
+            <img src="../img/영화/반도.jpg" width="400px" height="500px" />
+          </div>
+        </div>
+      </div>
+      <div class="cards col-2">
+        <div class="box-img translateX">
+          <p>
+            가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
+            태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
+          </p>
+          <div class="fills">
+            <img
+              src="../img/영화/백두산_영화_포스터.jpg"
+              width="400px"
+              height="500px"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="cards col-2">
+        <div class="box-img translateX">
+          <p>
+            가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
+            태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
+          </p>
+          <div class="fills">
+            <img src="../img/영화/신과 함께.jpg" width="400px" height="500px" />
+          </div>
+        </div>
+      </div>
+      <div class="cards col-2">
+        <div class="box-img translateX">
+          <p>
+            가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
+            태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
+          </p>
+          <div class="fills">
+            <img src="../img/영화/증인.jpg" width="400px" height="500px" />
+          </div>
+        </div>
+      </div>
+      <div class="cards col-2">
+        <div class="box-img translateX">
+          <p>
+            가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
+            태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
+          </p>
+          <div class="fills">
+            <img src="../img/영화/발레리나.webp" width="400px" height="500px" />
+          </div>
+        </div>
+      </div>
+      <div class="cards col-2">
+        <div class="box-img translateX">
+          <p>
+            가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
+            태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
+          </p>
+          <div class="fills">
+            <img src="../img/영화/변신.webp" width="400px" height="500px" />
+          </div>
+        </div>
+      </div>
+      <div class="cards col-2">
+        <div class="box-img translateX">
+          <p>
+            가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
+            태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
+          </p>
+          <div class="fills">
+            <img
+              src="../img/영화/뷰티인 사이트.jpg"
+              width="400px"
+              height="500px"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="cards col-2">
+        <div class="box-img translateX">
+          <p>
+            가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
+            태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
+          </p>
+          <div class="fills">
+            <img src="../img/영화/30일.webp" width="400px" height="500px" />
+          </div>
+        </div>
+      </div>
+      <div class="cards col-2">
+        <div class="box-img translateX">
+          <p>
+            가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
+            태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
+          </p>
+          <div class="fills">
+            <img src="../img/영화/모가디슈.jpg" width="400px" height="500px" />
+          </div>
+        </div>
+      </div>
+      <div class="cards col-2">
+        <div class="box-img translateX">
+          <p>
+            가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
+            태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
+          </p>
+          <div class="fills">
+            <img src="../img/영화/숨바꼭질.jpg" width="400px" height="500px" />
           </div>
         </div>
       </div>
     </main>
-     <!-- footer 시작 -->
+    <!-- footer 시작 -->
 
-     <footer class="icons">
+    <footer class="icons">
       <div class="icon">
         <div>
           <img
@@ -173,10 +337,18 @@
           />
         </div>
         <div>
-          <img src="../img/아이콘/klipartz.com.png" width="50px" height="50px" />
+          <img
+            src="../img/아이콘/klipartz.com.png"
+            width="50px"
+            height="50px"
+          />
         </div>
         <div>
-          <img src="../img/아이콘/klipartz.com (1).png" width="50px" height="50px" />
+          <img
+            src="../img/아이콘/klipartz.com (1).png"
+            width="50px"
+            height="50px"
+          />
         </div>
       </div>
       <div class="texts">
