--- a/movie/html/영화.html
+++ b/movie/html/영화.html
@@ -17,7 +17,11 @@
         <!-- <div class="nav-Bar"> -->
         <div id="horizontal-underline"></div>
         <div class="logo-img">
-          <!-- <img src="../img/MOVIE.svg">  -->
+          <img
+            src="../img/아이콘/MOVIE Made in - Koo ha rim (1).svg"
+            width="200px"
+            height="100px"
+          />
           <img
             src="../img/아이콘/free-icon-play-button-arrowhead-27223.png"
             width="200px"
@@ -108,7 +112,7 @@
     </div>
 
     <main class="row">
-      <div class="cards col-4">
+      <div class="cards col-2">
         <div class="box-img translateX">
           <p>
             가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
@@ -116,14 +120,14 @@
           </p>
           <div class="fills">
             <img
-              src="../img/드라마/정신병동에도 아침이 와요.jpg"
-              width="200px"
-              height="300px"
+              src="../img/영화/메이즈 러너.webp"
+              width="400px"
+              height="500px"
             />
           </div>
         </div>
       </div>
-      <div class="cards col-4">
+      <div class="cards col-2">
         <div class="box-img translateX">
           <p>
             가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
@@ -131,14 +135,14 @@
           </p>
           <div class="fills">
             <img
-              src="../img/드라마/검색어를 입력.jpg"
-              width="200px"
-              height="300px"
+              src="../img/영화/사일런트 힐.jpg"
+              width="400px"
+              height="500px"
             />
           </div>
         </div>
       </div>
-      <div class="cards col-4">
+      <div class="cards col-2">
         <div class="box-img translateX">
           <p>
             가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
@@ -146,14 +150,14 @@
           </p>
           <div class="fills">
             <img
-              src="../img/드라마/구르미 그린 달빛.jpg"
-              width="200px"
-              height="300px"
+              src="../img/영화/조커.jpg"
+              width="400px"
+              height="500px"
             />
           </div>
         </div>
       </div>
-      <div class="cards col-4">
+      <div class="cards col-2">
         <div class="box-img translateX">
           <p>
             가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
@@ -161,25 +165,25 @@
           </p>
           <div class="fills">
             <img
-              src="../img/드라마/드라마_도깨비_포스터2.jpg"
-              width="200px"
-              height="300px"
+              src="../img/영화/나홀로 집에 2.webp"
+              width="400px"
+              height="500px"
             />
           </div>
         </div>
       </div>
-      <div class="cards col-4">
+      <div class="cards col-2">
         <div class="box-img translateX">
           <p>
             가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
             태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
           </p>
           <div class="fills">
-            <img src="../img/드라마/빈센조.jpg" width="200px" height="300px" />
+            <img src="../img/영화/해리포터.jpg" width="400px" height="500px" />
           </div>
         </div>
       </div>
-      <div class="cards col-4">
+      <div class="cards col-2">
         <div class="box-img translateX">
           <p>
             가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
@@ -187,14 +191,14 @@
           </p>
           <div class="fills">
             <img
-              src="../img/드라마/마이데몬.jpg"
-              width="200px"
-              height="300px"
+              src="../img/영화/찰리 2.jpg"
+              width="400px"
+              height="500px"
             />
           </div>
         </div>
       </div>
-      <div class="cards col-4">
+      <div class="cards col-2">
         <div class="box-img translateX">
           <p>
             가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
@@ -202,14 +206,14 @@
           </p>
           <div class="fills">
             <img
-              src="../img/드라마/하이쿠키.jpg"
-              width="200px"
-              height="300px"
+              src="../img/영화/타겟.jpeg"
+              width="400px"
+              height="500px"
             />
           </div>
         </div>
       </div>
-      <div class="cards col-4">
+      <div class="cards col-2">
         <div class="box-img translateX">
           <p>
             가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
@@ -217,21 +221,120 @@
           </p>
           <div class="fills">
             <img
-              src="../img/드라마/드림하이.jpg"
-              width="200px"
-              height="300px"
+              src="../img/영화/맨홀.jpg"
+              width="400px"
+              height="500px"
             />
           </div>
         </div>
       </div>
-      <div class="cards col-4">
+      <div class="cards col-2">
         <div class="box-img translateX">
           <p>
             가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
             태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
           </p>
           <div class="fills">
-            <img src="../img/드라마/금수저.jpg" width="200px" height="300px" />
+            <img src="../img/영화/반도.jpg" width="400px" height="500px" />
+          </div>
+        </div>
+      </div>
+      <div class="cards col-2">
+        <div class="box-img translateX">
+          <p>
+            가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
+            태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
+          </p>
+          <div class="fills">
+            <img src="../img/영화/백두산_영화_포스터.jpg" width="400px" height="500px" />
+          </div>
+        </div>
+      </div>
+      <div class="cards col-2">
+        <div class="box-img translateX">
+          <p>
+            가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
+            태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
+          </p>
+          <div class="fills">
+            <img src="../img/영화/신과 함께.jpg" width="400px" height="500px" />
+          </div>
+        </div>
+      </div>
+      <div class="cards col-2">
+        <div class="box-img translateX">
+          <p>
+            가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
+            태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
+          </p>
+          <div class="fills">
+            <img src="../img/영화/증인.jpg" width="400px" height="500px" />
+          </div>
+        </div>
+      </div>
+      <div class="cards col-2">
+        <div class="box-img translateX">
+          <p>
+            가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
+            태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
+          </p>
+          <div class="fills">
+            <img src="../img/영화/발레리나.webp" width="400px" height="500px" />
+          </div>
+        </div>
+      </div>
+      <div class="cards col-2">
+        <div class="box-img translateX">
+          <p>
+            가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
+            태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
+          </p>
+          <div class="fills">
+            <img src="../img/영화/변신.webp" width="400px" height="500px" />
+          </div>
+        </div>
+      </div>
+      <div class="cards col-2">
+        <div class="box-img translateX">
+          <p>
+            가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
+            태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
+          </p>
+          <div class="fills">
+            <img src="../img/영화/뷰티인 사이트.jpg" width="400px" height="500px" />
+          </div>
+        </div>
+      </div>
+      <div class="cards col-2">
+        <div class="box-img translateX">
+          <p>
+            가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
+            태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
+          </p>
+          <div class="fills">
+            <img src="../img/영화/30일.webp" width="400px" height="500px" />
+          </div>
+        </div>
+      </div>
+      <div class="cards col-2">
+        <div class="box-img translateX">
+          <p>
+            가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
+            태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
+          </p>
+          <div class="fills">
+            <img src="../img/영화/모가디슈.jpg" width="400px" height="500px" />
+          </div>
+        </div>
+      </div>
+      <div class="cards col-2">
+        <div class="box-img translateX">
+          <p>
+            가난한 집에서 태어난 아이가 우연히 얻게 된 금수저를 통해 부잣집에서
+            태어난 친구와 운명을 바꿔 후천적 금수저가 된 인생 어드벤처 이야기
+          </p>
+          <div class="fills">
+            <img src="../img/영화/숨바꼭질.jpg" width="400px" height="500px" />
           </div>
         </div>
       </div>
