--- a/movie/html/main.html
+++ b/movie/html/main.html
@@ -44,7 +44,7 @@
       <main>
         <section class="hero">
           <video
-            src="../videos/cap_30s.mp4"
+            src="../Video/2024-01-17 11 26 48.mp4"
             class="bg"
             autoplay
             loop
@@ -92,13 +92,16 @@
           <img src="../img/드라마/내일.jpg" alt="내일" />
         </div>
         <div class="carousel_slide">
-          <img src="../img/제빵왕 김탁구.jpg" alt="제빵왕 김탁구" />
+          <img src="../img/드라마/뉴하트.jpg" alt="제빵왕 김탁구" />
         </div>
         <div class="carousel_slide">
           <img src="../img/드라마/응답하라 1998.jpg" alt="응답하라 1998" />
         </div>
         <div class="carousel_slide">
-          <img src="../img/드라마/구르미 그린 달빛.jpg" alt="구르미 그린 달빛" />
+          <img
+            src="../img/드라마/구르미 그린 달빛.jpg"
+            alt="구르미 그린 달빛"
+          />
         </div>
         <div class="carousel_slide">
           <img src="../img/드라마/드라마_도깨비_포스터2.jpg" alt="도깨비" />
@@ -705,7 +708,7 @@
             />
           </div>
         </div>
-        
+
         <!-- 캐러셀 사이드 버튼 -->
         <div class="carousel5_button_container">
           <button type="button" class="carousel5_prev">
@@ -758,7 +761,6 @@
           <div class="carousel5_circle"></div>
         </div>
       </div>
-
     </div>
 
     <!-- 캐러셀 5끝 -->
@@ -766,19 +768,29 @@
     <!-- footer 시작 -->
 
     <footer class="icons">
-      <div class="icon">
-        <div>
-          <img
-            src="../img/아이콘/free-icon-facebook-124010.png"
-            width="45px"
-            height="45px"
-          />
-        </div>
-        <div>
-          <img src="../img/아이콘/klipartz.com.png" width="50px" height="50px" />
-        </div>
-        <div>
-          <img src="../img/아이콘/klipartz.com (1).png" width="50px" height="50px" />
+      <div class="icon"> 
+        <div class="icon-in">
+          <div>
+            <img
+              src="../img/아이콘/free-icon-facebook-124010.png"
+              width="45px"
+              height="45px"
+            />
+          </div>
+          <div>
+            <img
+              src="../img/아이콘/klipartz.com.png"
+              width="50px"
+              height="50px"
+            />
+          </div>
+          <div>
+            <img
+              src="../img/아이콘/klipartz.com (1).png"
+              width="50px"
+              height="50px"
+            />
+          </div>
         </div>
       </div>
       <div class="texts">
