--- a/movie/html/만화.html
+++ b/movie/html/만화.html
@@ -393,6 +393,7 @@
 
     <footer class="icons">
       <div class="icon">
+      <div class="icon-in">
         <div>
           <img
             src="../img/아이콘/free-icon-facebook-124010.png"
@@ -415,6 +416,7 @@
           />
         </div>
       </div>
+    </div>
       <div class="texts">
         <div class="text">
           <p>
