--- a/movie/html/영화.html
+++ b/movie/html/영화.html
@@ -31,7 +31,7 @@
         <div class="menu">
           <a href="../html/main.html" class="aa1">Home</a>
           <a href="../html/드라마.html" class="aa1">드라마( TV series)</a>
-          <a href="" class="aa1">영화(film)</a>
+          <a href="#" class="aa1">영화(film)</a>
           <a href="../html/예능.html" class="aa1">예능 (unscripted shows)</a>
           <a href="../html/만화.html" class="aa1">만화</a>
         </div>
@@ -402,6 +402,7 @@
 
     <footer class="icons">
       <div class="icon">
+      <div class="icon-in">
         <div>
           <img
             src="../img/아이콘/free-icon-facebook-124010.png"
@@ -424,6 +425,7 @@
           />
         </div>
       </div>
+    </div>
       <div class="texts">
         <div class="text">
           <p>
@@ -440,8 +442,8 @@
           <p>클라우드 호스팅: Amazon Web Services Inc.</p>
         </div>
       </div>
+  
     </footer>
-
     <!-- footer 끝 -->
   </body>
   <script>
