--- a/movie/html/예능.html
+++ b/movie/html/예능.html
@@ -343,6 +343,7 @@
 
     <footer class="icons">
       <div class="icon">
+      <div class="icon-in">
         <div>
           <img
             src="../img/아이콘/free-icon-facebook-124010.png"
@@ -365,6 +366,7 @@
           />
         </div>
       </div>
+    </div>
       <div class="texts">
         <div class="text">
           <p>
@@ -381,6 +383,7 @@
           <p>클라우드 호스팅: Amazon Web Services Inc.</p>
         </div>
       </div>
+  
     </footer>
  <!-- footer 끝 -->
   </body>
