--- a/movie/html/드라마.html
+++ b/movie/html/드라마.html
@@ -354,6 +354,7 @@
 
     <footer class="icons">
       <div class="icon">
+      <div class="icon-in">
         <div>
           <img
             src="../img/아이콘/free-icon-facebook-124010.png"
@@ -376,6 +377,7 @@
           />
         </div>
       </div>
+    </div>
       <div class="texts">
         <div class="text">
           <p>
