--- a/if -이프/html/main.html
+++ b/if -이프/html/main.html
@@ -131,91 +131,69 @@
       </div>
     </nav>
     <!-- nav 끝 -->
+    <main class="main">
+      <div id="content-1">
+        <div class="front-left">
+          <div class="P-tag">
+            <p>Hi, nice to meet you</p>
+            <p>
+              If you want to hear a song
+              <br />about how you feel right now...
+            </p>
 
-    <div class="container">
-      <h1 class="title">
-        <span>Hi, nice to meet you </span>
-      </h1>
+            <img src="../img/image 2.png" />
 
-      <h2 class="title">
-        <span>
-          If you want to hear a song
-          <br />about how you feel right now...
-          <img
-            class="arrow"
-            src="../img/test/Group 233.png"
-            width="60px"
-            height="60px"
-          />
-        </span>
-      </h2>
-      <div>
-        <img src="../img/은색 헤드셋.png" width="450px" height="430px" />
-      </div>
+            <img class="icon" src="../img/은색 헤드셋.png" />
+          </div>
+        </div>
 
-      <div id="main-poto">
-        <div class="main">
-          <div class="main_img">
-            <img
-              src="../img/pop/빌리 아일리쉬.jpg"
-              width="100px"
-              height="100px"
-            />
+        <div class="front-right">
+          <div class="main-img">
+            <img src="../img/K-pop/에스파.jpg" />
+            <p>K-pop</p>
+          </div>
+          <div class="main-img">
+            <img src="../img/pop/빌리 아일리쉬.jpg" />
             <p>pop</p>
           </div>
-          <div class="main_img">
-            <img src="../img/K-pop/에스파.jpg" width="100px" height="100px" />
-            <p>k-pop</p>
-          </div>
-          <div class="main_img">
-            <img src="../img/발라드/폴킴.webp" width="100px" height="100px" />
-            <p>발라드</p>
-          </div>
-          <div class="main_img">
-            <img
-              src="../img/J-pop/요네즈 켄시.webp"
-              width="100px"
-              height="100px"
-            />
+          <div class="main-img">
+            <img src="../img/J-pop/요네즈 켄시.webp" />
             <p>J-pop</p>
           </div>
-        </div>
-
-        <div class="main-2">
-          <div class="main_img">
-            <img src="../img/랩/이영지 2.jpg" width="100px" height="100px" />
+          <div class="main-img">
+            <img src="../img/발라드/폴킴.webp" />
+            <p>발라드</p>
+          </div>
+          <div class="main-img">
+            <img src="../img/랩/이영지 2.jpg" />
             <p>랩</p>
           </div>
-          <div class="main_img">
-            <img
-              src="../img/드라마 ost/드라마_도깨비_포스터2 (1).jpg"
-              width="100px"
-              height="100px"
-            />
+          <div class="main-img">
+            <img src="../img/드라마 ost/드라마_도깨비_포스터2 (1).jpg" />
             <p>드라마 OST</p>
           </div>
-          <div class="main_img">
-            <img src="../img/뽀로로.jpg" width="100px" height="100px" />
+          <div class="main-img">
+            <img src="../img/뽀로로.jpg" />
             <p>어린이 노래</p>
           </div>
-          <div class="main_img">
-            <img
-              src="../img/옛날 노래/코요테.jpg"
-              width="100px"
-              height="100px"
-            />
-            <p>옛날 노래</p>
+          <div class="main-img">
+            <img src="../img/옛날 노래/코요테.jpg" />
+            <p>추억의 노래</p>
           </div>
         </div>
       </div>
-      <!-- 캐러셀  -->
-      <div>
-        <img
-          src="../img/K-pop/아이유- LOVE POEM.webp"
-          width="200px"
-          height="200px"
-        />
+      <div id="content-2">
+        <div class="middle-left"></div>
+        <div class="middle-right"></div>
       </div>
-    </div>
+
+      <div id="content-3">
+        <div class="last">
+          <div></div>
+        </div>
+      </div>
+    </main>
+
+    <footer></footer>
   </body>
 </html>
