--- a/movie/html/main.html
+++ b/movie/html/main.html
@@ -513,7 +513,12 @@
             />
           </div>
           <div class="carousel4_slide">
-            <img src="../img/예능/snl.jpg" width="100px" height="100px" alt="snl" />
+            <img
+              src="../img/예능/snl.jpg"
+              width="100px"
+              height="100px"
+              alt="snl"
+            />
           </div>
           <div class="carousel4_slide">
             <img
@@ -1051,5 +1056,11 @@
       });
     });
     showSlide5(0);
+  </script>
+
+  <script>
+    function moveToPage() {
+      location.href = "movie/main.html";
+    }
   </script>
 </html>
