--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../css/main.css" />
-    <script src=""></script>
   </head>
   <body>
     <div class="nav-bg-all">
@@ -513,7 +512,12 @@
             />
           </div>
           <div class="carousel4_slide">
-            <img src="../img/예능/snl.jpg" width="100px" height="100px" alt="snl" />
+            <img
+              src="../img/예능/snl.jpg"
+              width="100px"
+              height="100px"
+              alt="snl"
+            />
           </div>
           <div class="carousel4_slide">
             <img
