--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
     <div class="nav-bg-all">
