--- a/index.html
+++ b/index.html
@@ -24,27 +24,27 @@
         <div class="logo-img">
           <!-- <img src="../img/MOVIE.svg">  -->
           <img
-            src="../img/아이콘/MOVIE Made in - Koo ha rim (1).svg"
+            src="movie/img/아이콘/MOVIE Made in - Koo ha rim (1).svg"
             width="200px"
             height="100px"
           />
         </div>
         <div class="menu">
           <a href="#" class="aa1">Home</a>
-          <a href="../html/드라마.html" class="aa1">드라마( TV series)</a>
-          <a href="../html/영화.html" class="aa1">영화(film)</a>
-          <a href="../html/예능.html" class="aa1">예능 (unscripted shows)</a>
-          <a href="../html/만화.html" class="aa1">만화</a>
+          <a href="movie/html/드라마.html" class="aa1">드라마( TV series)</a>
+          <a href="movie/html/영화.html" class="aa1">영화(film)</a>
+          <a href="movie/html/예능.html" class="aa1">예능 (unscripted shows)</a>
+          <a href="movie/html/만화.html" class="aa1">만화</a>
         </div>
         <div class="login">
-          <a href="../html/프로필.html">프로필 °</a>
+          <a href="movie/html/프로필.html">프로필 °</a>
           <a href="#">로그이웃</a>
         </div>
       </nav>
       <main>
         <section class="hero">
           <video
-            src="../Video/2024-01-17 11 26 48.mp4"
+            src="movie/Video/2024-01-17 11 26 48.mp4"
             class="bg"
             autoplay
             loop
@@ -55,7 +55,7 @@
               <span class="in">청년경찰</span>
               <button class="hero-in-btn">
                 <img
-                  src="../img/아이콘/free-icon-play-button-arrowhead-27223.png"
+                  src="movie/img/아이콘/free-icon-play-button-arrowhead-27223.png"
                   width="30px"
                   height="30px"
                 />
