--- a/movie/html/main.html
+++ b/movie/html/main.html
@@ -25,7 +25,7 @@
         <div class="logo-img">
           <!-- <img src="../img/MOVIE.svg">  -->
           <img
-            src="../img/아이콘/MOVIE Made in - Koo ha rim (1).svg"
+            src="movie/img/아이콘/MOVIE Made in - Koo ha rim (1).svg"
             width="200px"
             height="100px"
           />
