--- a/movie/html/main.html
+++ b/movie/html/main.html
@@ -32,20 +32,20 @@
         </div>
         <div class="menu">
           <a href="#" class="aa1">Home</a>
-          <a href="../html/드라마.html" class="aa1">드라마( TV series)</a>
-          <a href="../html/영화.html" class="aa1">영화(film)</a>
-          <a href="../html/예능.html" class="aa1">예능 (unscripted shows)</a>
-          <a href="../html/만화.html" class="aa1">만화</a>
+          <a href="movie/html/드라마.html" class="aa1">드라마( TV series)</a>
+          <a href="movie/html/영화.html" class="aa1">영화(film)</a>
+          <a href="movie/html/예능.html" class="aa1">예능 (unscripted shows)</a>
+          <a href="movie/html/만화.html" class="aa1">만화</a>
         </div>
         <div class="login">
-          <a href="../html/프로필.html">프로필 °</a>
+          <a href="movie/html/프로필.html">프로필 °</a>
           <a href="#">로그이웃</a>
         </div>
       </nav>
       <main>
         <section class="hero">
           <video
-            src="../Video/2024-01-17 11 26 48.mp4"
+            src="movie/Video/2024-01-17 11 26 48.mp4"
             class="bg"
             autoplay
             loop
@@ -56,7 +56,7 @@
               <span class="in">청년경찰</span>
               <button class="hero-in-btn">
                 <img
-                  src="../img/아이콘/free-icon-play-button-arrowhead-27223.png"
+                  src="movie/img/아이콘/free-icon-play-button-arrowhead-27223.png"
                   width="30px"
                   height="30px"
                 />
@@ -75,43 +75,46 @@
       <!-- 캐러셀 이미지 삽입 -->
       <div class="carousel_wrapper">
         <div class="carousel_slide">
-          <img src="../img/드라마/나쁜엄마.png" alt="나쁜엄마" />
+          <img src="movie/img/드라마/나쁜엄마.png" alt="나쁜엄마" />
         </div>
         <div class="carousel_slide">
-          <img src="../img/드라마/상속자들.webp" alt="상속자들" />
-        </div>
-        <div class="carousel_slide">
-          <img src="../img/드라마/호텔 델루나 포스터.jpg" alt="호텔 델루나" />
-        </div>
-        <div class="carousel_slide">
-          <img src="../img/드라마/꽃보다 남자.jpg" alt="꽃보다 남자" />
-        </div>
-        <div class="carousel_slide">
-          <img src="../img/드라마/빈센조.jpg" alt="빈센조" />
-        </div>
-        <div class="carousel_slide">
-          <img src="../img/드라마/내일.jpg" alt="내일" />
-        </div>
-        <div class="carousel_slide">
-          <img src="../img/드라마/뉴하트.jpg" alt="제빵왕 김탁구" />
-        </div>
-        <div class="carousel_slide">
-          <img src="../img/드라마/응답하라 1998.jpg" alt="응답하라 1998" />
+          <img src="movie/img/드라마/상속자들.webp" alt="상속자들" />
         </div>
         <div class="carousel_slide">
           <img
-            src="../img/드라마/구르미 그린 달빛.jpg"
+            src="movie/img/드라마/호텔 델루나 포스터.jpg"
+            alt="호텔 델루나"
+          />
+        </div>
+        <div class="carousel_slide">
+          <img src="movie/img/드라마/꽃보다 남자.jpg" alt="꽃보다 남자" />
+        </div>
+        <div class="carousel_slide">
+          <img src="movie/img/드라마/빈센조.jpg" alt="빈센조" />
+        </div>
+        <div class="carousel_slide">
+          <img src="movie/img/드라마/내일.jpg" alt="내일" />
+        </div>
+        <div class="carousel_slide">
+          <img src="movie/img/드라마/뉴하트.jpg" alt="제빵왕 김탁구" />
+        </div>
+        <div class="carousel_slide">
+          <img src="movie/img/드라마/응답하라 1998.jpg" alt="응답하라 1998" />
+        </div>
+        <div class="carousel_slide">
+          <img
+            src="movie/img/드라마/구르미 그린 달빛.jpg"
             alt="구르미 그린 달빛"
           />
         </div>
         <div class="carousel_slide">
-          <img src="../img/드라마/드라마_도깨비_포스터2.jpg" alt="도깨비" />
+          <img src="movie/img/드라마/드라마_도깨비_포스터2.jpg" alt="도깨비" />
         </div>
         <div class="carousel_slide">
-          <img src="../img/드라마/금수저.jpg" alt="금수저" />
+          <img src="movie/img/드라마/금수저.jpg" alt="금수저" />
         </div>
         <div class="carousel_slide">
-          <img src="../img/드라마/스타트업.webp" alt="스타트업" />
+          <img src="movie/img/드라마/스타트업.webp" alt="스타트업" />
         </div>
       </div>
 
@@ -181,7 +184,7 @@
         <div class="carousel2_wrapper">
           <div class="carousel2_slide">
             <img
-              src="../img/대사/사탄들의 학교의 루시퍼의 등장이라.png"
+              src="movie/img/대사/사탄들의 학교의 루시퍼의 등장이라.png"
               width="100px"
               height="100px"
               alt="사탄들의 학교의 루시퍼의 등장이라"
@@ -189,7 +192,7 @@
           </div>
           <div class="carousel2_slide">
             <img
-              src="../img/대사/시켜줘 금잔디 명예소방관.png"
+              src="movie/img/대사/시켜줘 금잔디 명예소방관.png"
               width="100px"
               height="100px"
               alt="시켜줘 잔디 명예 소방관"
@@ -197,7 +200,7 @@
           </div>
           <div class="carousel2_slide">
             <img
-              src="../img/대사/너와 함께한 시간이 눈부셨다 .png"
+              src="movie/img/대사/너와 함께한 시간이 눈부셨다 .png"
               width="50px"
               height="100px"
               alt="너와 함께한 시간이 눈부셨다"
@@ -205,7 +208,7 @@
           </div>
           <div class="carousel2_slide">
             <img
-              src="../img/대사/이 시간 이후 내 걱정만 합니다..png"
+              src="movie/img/대사/이 시간 이후 내 걱정만 합니다..png"
               width="100px"
               height="100px"
               alt="이 시간 이후 내 걱정만 합니다."
@@ -213,7 +216,7 @@
           </div>
           <div class="carousel2_slide">
             <img
-              src="../img/대사/기억해 내가 너에게 반한 시간 .png"
+              src="movie/img/대사/기억해 내가 너에게 반한 시간 .png"
               width="100px"
               height="100px"
               alt="기억해 내가 너에게 반한 시간"
@@ -221,7 +224,7 @@
           </div>
           <div class="carousel2_slide">
             <img
-              src="../img/대사/길라임씨는 몇살때 부터 그렇게 이뻤나.png"
+              src="movie/img/대사/길라임씨는 몇살때 부터 그렇게 이뻤나.png"
               width="100px"
               height="100px"
               alt="길라임씨는 몇살때 부터 그렇게 이뻤나"
@@ -230,14 +233,14 @@
 
           <div class="carousel2_slide">
             <img
-              src="../img/대사/왜 말을 못해 .png"
+              src="movie/img/대사/왜 말을 못해 .png"
               height="50px"
               alt="저 남자가 내 사람이다 , 저 남자가 내 애인이다 왜 말을 못해"
             />
           </div>
           <div class="carousel2_slide">
             <img
-              src="../img/대사/먗개고 밥알 말이다.png"
+              src="movie/img/대사/먗개고 밥알 말이다.png"
               width="50px"
               height="50px"
               alt="몇개고? 밥알 말이다"
@@ -245,7 +248,7 @@
           </div>
           <div class="carousel2_slide">
             <img
-              src="../img/대사/잊어달라 하였느냐.png"
+              src="movie/img/대사/잊어달라 하였느냐.png"
               width="100px"
               height="100px"
               alt="잊어달라 하였느냐, 하지만 잊지 못하였다."
@@ -319,7 +322,7 @@
         <div class="carousel3_wrapper">
           <div class="carousel3_slide">
             <img
-              src="../img/영화/나홀로집에 3.jpg"
+              src="movie/img/영화/나홀로집에 3.jpg"
               width="100px"
               height="100px"
               alt="나 홀로 집에"
@@ -327,7 +330,7 @@
           </div>
           <div class="carousel3_slide">
             <img
-              src="../img/영화/나우 유 씨 미 2.jpg"
+              src="movie/img/영화/나우 유 씨 미 2.jpg"
               width="100px"
               height="100px"
               alt="나우 유 씨 미 2"
@@ -335,7 +338,7 @@
           </div>
           <div class="carousel3_slide">
             <img
-              src="../img/영화/극한직업.png"
+              src="movie/img/영화/극한직업.png"
               width="100px"
               height="100px"
               alt="극한직업"
@@ -343,7 +346,7 @@
           </div>
           <div class="carousel3_slide">
             <img
-              src="../img/영화/감기 2.jpeg"
+              src="movie/img/영화/감기 2.jpeg"
               width="100px"
               height="100px"
               alt="감기"
@@ -351,7 +354,7 @@
           </div>
           <div class="carousel3_slide">
             <img
-              src="../img/영화/라라랜드.jpg"
+              src="movie/img/영화/라라랜드.jpg"
               width="100px"
               height="100px"
               alt="라라랜드"
@@ -359,7 +362,7 @@
           </div>
           <div class="carousel3_slide">
             <img
-              src="../img/영화/기생충_포스터.jpg"
+              src="movie/img/영화/기생충_포스터.jpg"
               width="100px"
               height="100px"
               alt="기생충"
@@ -367,7 +370,7 @@
           </div>
           <div class="carousel3_slide">
             <img
-              src="../img/영화/타겟.jpeg"
+              src="movie/img/영화/타겟.jpeg"
               width="100px"
               height="100px"
               alt="타겟"
@@ -375,7 +378,7 @@
           </div>
           <div class="carousel3_slide">
             <img
-              src="../img/영화/메이즈 러너.webp"
+              src="movie/img/영화/메이즈 러너.webp"
               width="100px"
               height="100px"
               alt="메이즈 러너"
@@ -383,7 +386,7 @@
           </div>
           <div class="carousel3_slide">
             <img
-              src="../img/영화/너의 결혼식.jpeg"
+              src="movie/img/영화/너의 결혼식.jpeg"
               width="100px"
               height="100px"
               alt="너의 결혼식"
@@ -458,7 +461,7 @@
         <div class="carousel4_wrapper">
           <div class="carousel4_slide">
             <img
-              src="../img/예능/유퀴즈.jpg"
+              src="movie/img/예능/유퀴즈.jpg"
               width="100px"
               height="100px"
               alt="유퀴즈"
@@ -466,7 +469,7 @@
           </div>
           <div class="carousel4_slide">
             <img
-              src="../img/예능/꼬꼬무.jpeg"
+              src="movie/img/예능/꼬꼬무.jpeg"
               width="100px"
               height="100px"
               alt="꼬꼬무"
@@ -474,7 +477,7 @@
           </div>
           <div class="carousel4_slide">
             <img
-              src="../img/예능/신서유기.jpeg"
+              src="movie/img/예능/신서유기.jpeg"
               width="100px"
               height="100px"
               alt="신서유기"
@@ -482,7 +485,7 @@
           </div>
           <div class="carousel4_slide">
             <img
-              src="../img/예능/오은영의 금쪽 상담소.webp"
+              src="movie/img/예능/오은영의 금쪽 상담소.webp"
               width="100px"
               height="100px"
               alt="오은영의 금쪽 상담소"
@@ -490,7 +493,7 @@
           </div>
           <div class="carousel4_slide">
             <img
-              src="../img/예능/해치지않아.jpg"
+              src="movie/img/예능/해치지않아.jpg"
               width="100px"
               height="100px"
               alt="해치지않아"
@@ -498,7 +501,7 @@
           </div>
           <div class="carousel4_slide">
             <img
-              src="../img/예능/지구마불 세계여행.jpg"
+              src="movie/img/예능/지구마불 세계여행.jpg"
               width="100px"
               height="100px"
               alt="지구마불 세계여행"
@@ -506,7 +509,7 @@
           </div>
           <div class="carousel4_slide">
             <img
-              src="../img/예능/어쩌다 사장.jpg"
+              src="movie/img/예능/어쩌다 사장.jpg"
               width="100px"
               height="100px"
               alt="어쩌다 사장"
@@ -514,7 +517,7 @@
           </div>
           <div class="carousel4_slide">
             <img
-              src="../img/예능/snl.jpg"
+              src="movie/img/예능/snl.jpg"
               width="100px"
               height="100px"
               alt="snl"
@@ -522,7 +525,7 @@
           </div>
           <div class="carousel4_slide">
             <img
-              src="../img/예능/문제적 남자.jpg"
+              src="movie/img/예능/문제적 남자.jpg"
               width="100px"
               height="100px"
               alt="문제적 남자"
@@ -530,7 +533,7 @@
           </div>
           <div class="carousel4_slide">
             <img
-              src="../img/예능/무한상사.jpeg"
+              src="movie/img/예능/무한상사.jpeg"
               width="100px"
               height="100px"
               alt="무한상사"
@@ -538,7 +541,7 @@
           </div>
           <div class="carousel4_slide">
             <img
-              src="../img/예능/아무튼 출근.jpeg"
+              src="movie/img/예능/아무튼 출근.jpeg"
               width="100px"
               height="100px"
               alt="아무튼 출근"
@@ -546,7 +549,7 @@
           </div>
           <div class="carousel4_slide">
             <img
-              src="../img/예능/아는 형님.jpg"
+              src="movie/img/예능/아는 형님.jpg"
               width="100px"
               height="100px"
               alt="아는 형님"
@@ -619,7 +622,7 @@
         <div class="carousel5_wrapper">
           <div class="carousel5_slide">
             <img
-              src="../img/만화/꿈빛  파티시엘.jpg"
+              src="movie/img/만화/꿈빛  파티시엘.jpg"
               width="100px"
               height="100px"
               alt="꿈빛 파티시엘"
@@ -627,7 +630,7 @@
           </div>
           <div class="carousel5_slide">
             <img
-              src="../img/만화/아따맘마 1.jpg"
+              src="movie/img/만화/아따맘마 1.jpg"
               width="100px"
               height="100px"
               alt="아따맘마 1"
@@ -635,7 +638,7 @@
           </div>
           <div class="carousel5_slide">
             <img
-              src="../img/만화/괴담_레스토랑_포스터.jpg"
+              src="movie/img/만화/괴담_레스토랑_포스터.jpg"
               width="100px"
               height="100px"
               alt="괴담_레스토랑_포스터"
@@ -643,7 +646,7 @@
           </div>
           <div class="carousel5_slide">
             <img
-              src="../img/만화/디지몬.jpg"
+              src="movie/img/만화/디지몬.jpg"
               width="100px"
               height="100px"
               alt="디지몬"
@@ -651,7 +654,7 @@
           </div>
           <div class="carousel5_slide">
             <img
-              src="../img/만화/너에게 닿기를 1.jpeg"
+              src="movie/img/만화/너에게 닿기를 1.jpeg"
               width="100px"
               height="100px"
               alt="너에게 닿기를 1."
@@ -659,7 +662,7 @@
           </div>
           <div class="carousel5_slide">
             <img
-              src="../img/만화/데스노트 1.webp"
+              src="movie/img/만화/데스노트 1.webp"
               width="100px"
               height="100px"
               alt="데스노트"
@@ -667,7 +670,7 @@
           </div>
           <div class="carousel5_slide">
             <img
-              src="../img/만화/학교 괴담 1.jpeg"
+              src="movie/img/만화/학교 괴담 1.jpeg"
               width="100px"
               height="100px"
               alt="학교 괴담"
@@ -675,7 +678,7 @@
           </div>
           <div class="carousel5_slide">
             <img
-              src="../img/만화/코난 1.jpg"
+              src="movie/img/만화/코난 1.jpg"
               width="100px"
               height="100px"
               alt="코난"
@@ -683,7 +686,7 @@
           </div>
           <div class="carousel5_slide">
             <img
-              src="../img/만화/시간을 달리는 소녀 1.jpeg"
+              src="movie/img/만화/시간을 달리는 소녀 1.jpeg"
               width="100px"
               height="100px"
               alt="시간을 달리는 소녀"
@@ -691,7 +694,7 @@
           </div>
           <div class="carousel5_slide">
             <img
-              src="../img/만화/스즈메의 문단속.png"
+              src="movie/img/만화/스즈메의 문단속.png"
               width="100px"
               height="100px"
               alt="스즈메의 문단속"
@@ -699,7 +702,7 @@
           </div>
           <div class="carousel5_slide">
             <img
-              src="../img/만화/마르코는 9 살.webp"
+              src="movie/img/만화/마르코는 9 살.webp"
               width="100px"
               height="100px"
               alt="마르코는 9살"
@@ -707,7 +710,7 @@
           </div>
           <div class="carousel5_slide">
             <img
-              src="../img/만화/거울속 외딴 성 1.jpeg"
+              src="movie/img/만화/거울속 외딴 성 1.jpeg"
               width="100px"
               height="100px"
               alt="거울 속 외딴 성"
@@ -778,21 +781,21 @@
         <div class="icon-in">
           <div>
             <img
-              src="../img/아이콘/free-icon-facebook-124010.png"
+              src="movie/img/아이콘/free-icon-facebook-124010.png"
               width="45px"
               height="45px"
             />
           </div>
           <div>
             <img
-              src="../img/아이콘/klipartz.com.png"
+              src="movie/img/아이콘/klipartz.com.png"
               width="50px"
               height="50px"
             />
           </div>
           <div>
             <img
-              src="../img/아이콘/klipartz.com (1).png"
+              src="movie/img/아이콘/klipartz.com (1).png"
               width="50px"
               height="50px"
             />
