--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <div class="login">
           <a href="movie/html/프로필.html">프로필 °</a>
-          <a href="#">로그이웃</a>
+          <a href="movie/html/로그아웃.html">로그이웃</a>
         </div>
       </nav>
       <main>
