--- a/movie/html/프로필.html
+++ b/movie/html/프로필.html
@@ -11,7 +11,7 @@
       <h1 class="profile">MOVIE를 시청할 프로필을 선택해 주세요.</h1>
       <div class="profiles">
         <div>
-          <a href="../html/main.html">
+          <a href="main/html/main.html">
             <img src="../img/아이콘/프로필.png" />
           </a>
           <p>구하림</p>
