--- a/movie/html/프로필.html
+++ b/movie/html/프로필.html
@@ -11,7 +11,7 @@
       <h1 class="profile">MOVIE를 시청할 프로필을 선택해 주세요.</h1>
       <div class="profiles">
         <div>
-          <a href="main/html/main.html">
+          <a href="movie/html/main.html">
             <img src="../img/아이콘/프로필.png" />
           </a>
           <p>구하림</p>
@@ -30,8 +30,8 @@
         </div>
         <div>
           <a href="../html/프로필 추가.html">
-          <img src="../img/아이콘/누르기 전.png" />
-        </a>
+            <img src="../img/아이콘/누르기 전.png" />
+          </a>
           <p>프로필 추가</p>
         </div>
       </div>
