--- a/movie/html/프로필.html
+++ b/movie/html/프로필.html
@@ -12,7 +12,7 @@
       <div class="profiles">
         <div>
           <a href="movie/html/main.html">
-            <img src="../img/아이콘/프로필.png" />
+            <img src="movie/img/아이콘/프로필.png" />
           </a>
           <p>구하림</p>
         </div>
