--- a/movie/html/proflie.html
+++ b/movie/html/proflie.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>프로필</title>
-    <link rel="stylesheet" href="css/proflie.css" />
+    <link rel="stylesheet" href="../css/proflie.css" />
   </head>
   <body>
     <div class="content">
       <h1 class="profile">MOVIE를 시청할 프로필을 선택해 주세요.</h1>
       <div class="profiles">
         <div>
-          <a href="movie/html/main.html">
+          <a href="../html/main.html">
             <img src="../img/아이콘/프로필.png" />
           </a>
           <p>구하림</p>
@@ -30,8 +30,8 @@
         </div>
         <div>
           <a href="../html/프로필 추가.html">
-            <img src="../img/아이콘/누르기 전.png" />
-          </a>
+          <img src="../img/아이콘/누르기 전.png" />
+        </a>
           <p>프로필 추가</p>
         </div>
       </div>
