--- a/if -이프/html/main.html
+++ b/if -이프/html/main.html
@@ -76,8 +76,12 @@
             <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">
               <img src="../img/Group 123.png" width="30px" height="30px" />
             </h5>
-            <button class="offcanvas-btn-lo">로그인</button>
-            <button class="offcanvas-btn">회원가입</button>
+            <a href="../html/로그인.html">
+              <button class="offcanvas-btn-lo">로그인</button>
+            </a>
+            <a href="">
+              <button class="offcanvas-btn">회원가입</button>
+            </a>
 
             <button
               type="button"
