--- a/movie/html/로그아웃.html
+++ b/movie/html/로그아웃.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <section class="login-form">
-      <h1>LOGIN </h1>
+      <h1>LOGIN</h1>
       <form action="">
         <div class="int-area">
           <input type="text" name="id" id="id" autocomplete="off" required />
@@ -32,6 +32,9 @@
         </div>
         <div class="caption">
           <a href="">forget password?</a>
+          <button class="before-btn">
+            <a href="../html/main.html" class="before">이전으로 이동</a>
+          </button>
         </div>
       </form>
     </section>
