--- a/movie/html/로그아웃.html
+++ b/movie/html/로그아웃.html
@@ -33,7 +33,7 @@
         <div class="caption">
           <a href="">forget password?</a>
           <button class="before-btn">
-            <a href="../html/main.html" class="before">이전으로 이동</a>
+            <a href="../html/드라마.html" class="before">이전으로 이동</a>
           </button>
         </div>
       </form>
