--- a/movie/html/만화.html
+++ b/movie/html/만화.html
@@ -36,8 +36,8 @@
           <a href="#" class="aa1">만화</a>
         </div>
         <div class="login">
-          <a href="../html/프로필.html">프로필 °</a>
-          <a href="#">로그이웃</a>
+          <a href="../html/proflie.html">프로필 °</a>
+          <a href="../html/로그아웃.html">로그이웃</a>
         </div>
       </nav>
       <header>
