--- a/movie/html/예능.html
+++ b/movie/html/예능.html
@@ -31,8 +31,8 @@
           <a href="../html/만화.html" class="aa1">만화</a>
         </div>
         <div class="login">
-          <a href="../html/프로필.html">프로필 °</a>
-          <a href="#">로그이웃</a>
+          <a href="../html/proflie.html">프로필 °</a>
+          <a href="../html/로그아웃.html">로그이웃</a>
         </div>
       </nav>
       <main>
