--- a/movie/html/proflie.html
+++ b/movie/html/proflie.html
@@ -17,13 +17,13 @@
           <p>구하림</p>
         </div>
         <div>
-          <a href="../html/main.html">
+          <a href="../html/드라마.html">
             <img src="../img/아이콘/프로필 이미지 2.png" />
           </a>
           <p>황지선</p>
         </div>
         <div>
-          <a href="../html/main.html">
+          <a href="../html/드라마.html">
             <img src="../img/아이콘/프로필 3.png" />
           </a>
           <p>유으뜸</p>
