--- a/movie/html/proflie.html
+++ b/movie/html/proflie.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>프로필</title>
-    <link rel="stylesheet" href="../css/proflie.css" />
+    <link rel="stylesheet" href="movie/css/proflie.css" />
   </head>
   <body>
     <div class="content">
