--- a/movie/html/프로필 추가.html
+++ b/movie/html/프로필 추가.html
@@ -17,7 +17,7 @@
           <input type="name" placeholder="이름" />
         </div>
         <hr />
-        <a href="../html/프로필.html">
+        <a href="../html/proflie.html">
           <button class="name-btn">취소</button>
         </a>
       </div>
